# func

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: FindQuadmath.cmake  config.hpp.cmake  func-config.cmake.in
docs/: Doxyfile  Doxyfile_old  class_structure.md  comparison_between_nonuniform_tables.md  lookuptables.md  mainpage.dox  makefile  motivation.md  note_on_templates.md
docs/latex/: func_user_manual_template.tex  new_func.tex
examples/: 2D_lut.cpp  CMakeLists.txt  ZeroFunction.hpp  best-worst.cpp  chaste_log_function.hpp  compute_max_err_of_tables.cpp  difftables.cpp  experiment.cpp  experiment_best_worst.cpp  exponential.hpp  generate_tables_at_tol.cpp  plot.py  plot_all_err.gplt  plot_impl.cpp  run_experiment.sh  run_plot_impl.sh  test_function.hpp  test_interfaces.cpp
include/: ArgumentRecord.hpp  CMakeLists.txt  CompositeLookupTable.hpp  DirectEvaluation.hpp  EvaluationImplementation.hpp  FailureProofTable.hpp  FunctionContainer.hpp  ImplementationComparator.hpp  LookupTable.hpp  LookupTableFactory.hpp  LookupTableGenerator.hpp  StdRng.hpp  TableIncludes.hpp  TransferFunctionSinh.hpp  config.hpp  func.hpp  src_template.cpp.cmake
include/table_types/: ArmadilloInterpolationTable.hpp  ArmadilloPrecomputedInterpolationTable.hpp  ChebyInterpTable.hpp  ChebyInterpolationTable.hpp  ChebyshevPrecomputedInterpolationTable.hpp  ConstantTaylorTable.hpp  CubicHermiteTable.hpp  CubicInterpolationTable.hpp  CubicPrecomputedInterpolationTable.hpp  CubicTaylorTable.hpp  EqSpaceInterpTable.hpp  LinearInterpolationTable.hpp  LinearPrecomputedInterpolationTable.hpp  LinearRawInterpTable.hpp  LinearRawInterpolationTable.hpp  LinearTaylorTable.hpp  LookupTable.hpp  MetaTable.hpp  PadeTable.hpp  Polynomial.hpp  QuadraticInterpolationTable.hpp  QuadraticPrecomputedInterpolationTable.hpp  QuadraticTaylorTable.hpp  TableIncludes.hpp  TaylorTable.hpp  TransferFunction.hpp
include/tables/: ChebyInterpTable.hpp  CubicHermiteTable.hpp  EqSpaceInterpTable.hpp  ExactInterpTable.hpp  LinearRawInterpTable.hpp  MetaTable.hpp  PadeTable.hpp  Polynomial.hpp  TaylorTable.hpp  TransferFunction.hpp  tables.hpp
include/utils/: ArgumentRecord.hpp  CompositeLookupTable.hpp  DirectEvaluation.hpp  FailureProofTable.hpp  ImplementationComparator.hpp  LookupTableComparator.hpp  LookupTableFactory.hpp  LookupTableGenerator.hpp  RngInterface.hpp  StdRng.hpp  Timer.hpp  cxx17utils.hpp  func_utils.hpp  utils.hpp
src/: ArgumentRecord.cpp  ArgumentRecord.hpp  CMakeLists.txt  CompositeLookupTable.cpp  CompositeLookupTable.hpp  DirectEvaluation.cpp  DirectEvaluation.hpp  EvaluationFunctor.hpp  EvaluationImplementation.cpp  EvaluationImplementation.hpp  FailureProofTable.hpp  FunctionContainer.hpp  FunctionHelper.hpp  ImplementationComparator.cpp  ImplementationComparator.hpp  LookupTableFactory.cpp  LookupTableFactory.hpp  LookupTableGenerator.cpp  LookupTableGenerator.hpp  RngDriver.cpp  RngInterface.hpp  SpecialPoint.hpp  StdRng.hpp  Timer.cpp  Timer.hpp  TransferFunction.hpp  TransferFunctionIdentity.hpp  TransferFunctionInterface.hpp  TransferFunctionSinh.cpp  TransferFunctionSinh.hpp  UniformFailureProofTable.cpp  UniformLookupTableGenerator.cpp  UniformLookupTableGenerator.hpp  ZeroFunction.hpp  config.hpp.cmake  empty.cpp  func.hpp  func_impls.hpp  make_unique.hpp
src/table_types/: ArmadilloPrecomputedInterpolationTable.hpp  ArmadilloRegistrarDefinitions.cpp  CompositeLookupTable.cpp  CompositeLookupTable.hpp  ConstantTaylorTable.hpp  CubicHermiteTable.hpp  CubicPrecomputedInterpolationTable.hpp  CubicTaylorTable.hpp  FailureProofTable.hpp  LinearInterpolationTable.hpp  LinearPrecomputedInterpolationTable.hpp  LinearTaylorTable.hpp  LookupTable.hpp  MetaTable.hpp  NonUniformCubicPrecomputedInterpolationTable.hpp  NonUniformLinearInterpolationTable.cpp  NonUniformLinearInterpolationTable.hpp  NonUniformLookupTable.hpp  NonUniformPseudoCubicPrecomputedInterpolationTable.hpp  NonUniformPseudoLinearInterpolationTable.hpp  PadeTable.hpp  QuadraticPrecomputedInterpolationTable.hpp  QuadraticTaylorTable.hpp  RegistrarDefinitionsArmadillo.cpp  RegistrarDefinitionsStandard.cpp  StandardRegistrarDefinitions.cpp  TableIncludes.hpp  TaylorTable.hpp  UniformArmadilloPrecomputedInterpolationTable.cpp  UniformArmadilloPrecomputedInterpolationTable.hpp  UniformAutoDiffTable.cpp  UniformAutoDiffTable.hpp  UniformConstantTaylorTable.cpp  UniformConstantTaylorTable.hpp  UniformCubicHermiteTable.cpp  UniformCubicHermiteTable.hpp  UniformCubicPrecomputedInterpolationTable.cpp  UniformCubicPrecomputedInterpolationTable.hpp  UniformCubicTaylorTable.cpp  UniformCubicTaylorTable.hpp  (+22 more)
